--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "github repo: https://github.com/zheyanliu99/data-mining-hw3.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Problem 2"
    ]
   },
